# ucs-detect

./: .gitignore  .pylintrc  list-terminals.py  make_lang_table.py  make_results_rst.py  make_ri_table.py  make_sfz_table.py  make_sri_table.py  make_table_zwj.py  make_vs15_table.py  make_wide_table.py  pyproject.toml  re-run.py  tox.ini
data/: AbsoluteTelnetSSH.yaml  _linuxfbdev.yaml  _syncterm.yaml  alacritty.yaml  bobcat.yaml  cmd.exe.yaml  conemu.exe.yaml  contour.yaml  coolretroterm.yaml  extraterm.yaml  foot.yaml  ghostty.yaml  gnometerminal.yaml  hyper.yaml  iterm2.yaml  kitty.yaml  konsole.yaml  lxterminal.yaml  mintty.yaml  mlterm.yaml  putty.yaml  qterminal.yaml  rio.yaml  rxvtunicode.yaml  screen.yaml  securecrt.yaml  st.yaml  tabby.yaml  terminal_detail_mixins.yaml  terminalapp.yaml  terminalexe.yaml  terminator.yaml  terminology.yaml  termit.yaml  tmux.yaml  vim-terminal.yaml  vscodeterminal.yaml  westonterminal.yaml  wezterm.yaml  xfce4terminal.yaml  (+3 more)
docs/: conf.py  intro.rst  requirements.txt  results.rst
docs/_static/: score-colors.css
docs/sw_results/: alacritty.rst  bobcat.rst  contour.rst  coolretroterm.rst  extraterm.rst  foot.rst  ghostty.rst  gnometerminal.rst  hyper.rst  iterm2.rst  kitty.rst  konsole.rst  libvterm.rst  lxterminal.rst  mintty.rst  mlterm.rst  putty.rst  qterminal.rst  rio.rst  rxvtunicode.rst  screen.rst  st.rst  syncterm.rst  tabby.rst  terminalapp.rst  terminalexe.rst  terminator.rst  terminology.rst  termit.rst  tmux.rst  westonterminal.rst  wezterm.rst  xfce4terminal.rst  xterm.rst  xtermjs.rst  zutty.rst
ucs_detect/: __init__.py  browser.py  error_matcher.py  measure.py  table_lang.py  table_ri.py  table_sfz.py  table_sri.py  table_vs15.py  table_vs16.py  table_wide.py  table_xtgettcap.py  table_zwj.py  terminal.py
